2005-03-01  Jay Cox  <jaycox@gimp.org>

	* plug-ins/common/psd.c:  Back port fix for loading layer masks.
	Fixes bug #166976.
	* plug-ins/common/psd_save.c: Back port fix for file corruption
	bug.  Includes fix for excessive memory usage.  Fixes bug #167139
	and bug #121871.


2005-02-24  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/url.c: Handle HTTP 302 Redirect output from wget
	properly. Also give a little more informative display for unspecified
	sizes. Fixes bug #168322.

2005-02-23  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD:

	* libgimpwidgets/gimpbutton.c (gimp_button_button_press): don't
	reset button->press_state on double clicks because
	GDK_2BUTTON_PRESS always arrive immediately after
	GDK_BUTTON_PRESS, so resetting the state causes the second click
	of a double click to be always interpreted as "clicked", not
	"extended-clicked", breaking e.g. adding of multiple layers by
	shift-clicking the layers dialog's "new" button. Phew, too much
	text for a one-liner bug fix, blah... Spotted by Jimmac.

2005-02-23  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.2.5, interface_age 5.

2005-02-22  Sven Neumann  <sven@gimp.org>

	* Made 2.2.4 release.

2005-02-22  Sven Neumann  <sven@gimp.org>

	Merged from HEAD:

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_tool_events): switch from display-wide
	grab to application-wide grab while handling button-release event.
	Fixes bug #162823.

2005-02-21  Manish Singh  <yosh@gimp.org>

	Merged from HEAD:

	* app/text/gimpfont-utils.[ch]: be smarter about finding trailing
	numbers that look like sizes, so we don't have spurious commas.

	* app/text/gimpfontlist.c: As an optimization, figure out if
	pango needs a workaround, and if not, just call it directly.

2005-02-21  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD:

	* app/widgets/gimptoolbox.c (toolbox_area_notify): apply evil
	size_request hacks to the color/image/foo areas' wrapbox because